--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -58,6 +58,11 @@ h1, h2, h3, h4, h5 {
   letter-spacing: 1px;
   margin-bottom: 15px; }
 
+body {
+  font-size: 16px;
+  padding-right: 5px;
+  font-family: "Titillium Web", sans-serif; }
+
 img {
   margin: 0 auto;
   width: 100%;
@@ -67,24 +72,36 @@ button {
   background: white;
   padding: 2px 20px;
   border: 1px solid black;
-  font-family: 'Titillium Web', sans-serif;
   letter-spacing: 1px;
   font-size: 15px; }
-
-p {
-  font-size: 16px;
-  padding-right: 5px; }
 
 section {
   padding: 20px 0; }
 
-main {
-  padding: 20px 0;
-  margin: 20px 0; }
+address * {
+  font-size: 14px; }
+address p:not(.street) {
+  line-height: 2.5; }
+
+.list {
+  list-style-position: inside;
+  list-style-type: disc; }
+  .list li {
+    margin-bottom: 0.25rem; }
+    .list li span {
+      color: black; }
+    .list li:hover {
+      color: #306fe4; }
 
 .bordered {
   border-top: 1px solid black;
   border-bottom: 1px solid black; }
+
+.m-bottom {
+  margin-bottom: 1rem; }
+
+.m-bottom-sm {
+  margin-bottom: 0.25rem; }
 
 .big-text {
   font-size: 60px; }
@@ -111,7 +128,7 @@ main {
   .navbar a {
     font-size: 16px;
     text-decoration: none;
-    color: grey; }
+    color: #948989; }
     .navbar a:hover {
       text-decoration: underline;
       color: black; }
@@ -119,7 +136,7 @@ main {
 .nav-links {
   align-self: center; }
   .nav-links .nav-link {
-    margin-right: .5rem; }
+    margin-right: 0.5rem; }
 
 .logo {
   align-self: center; }
@@ -134,7 +151,7 @@ main {
   justify-content: space-between; }
 
 .half {
-  width: 49%; }
+  width: 50%; }
 
 .img-wrapper {
   display: flex;
@@ -150,14 +167,47 @@ main {
   height: auto; }
 
 .underline {
-  border-bottom: 1px solid darkslategray; }
+  border-bottom: 1px solid #948989; }
 
-address * {
-  font-size: 14px; }
-address p:not(.street) {
-  line-height: 2.5; }
+.wrapper p {
+  padding-right: 1rem; }
 
 .copyright {
+  font-size: 12px;
+  padding: 1rem;
+  margin: 1rem; }
+
+.cards {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between; }
+
+.card {
+  flex-basis: 49%;
+  padding: 1rem;
+  margin-bottom: 10px;
+  background: #f1efef; }
+  .card p {
+    line-height: 1.25; }
+
+.card-btn {
+  margin-top: 20px;
+  border-radius: 4px;
   font-size: 12px; }
+
+.info {
+  line-height: 1.25; }
+
+.img-fluid {
+  width: 100%; }
+  .img-fluid img {
+    width: 100%;
+    height: auto;
+    margin: auto 0; }
+
+.services-info {
+  margin: 0; }
 
 /*# sourceMappingURL=index.css.map */
