--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -58,9 +58,86 @@ h1, h2, h3, h4, h5 {
   letter-spacing: 1px;
   margin-bottom: 15px; }
 
+main {
+  margin: 1rem 0;
+  padding: 1rem 0; }
+  @media (min-width: 540px) {
+    main {
+      max-width: 540px;
+      margin: 0 auto; } }
+  @media (min-width: 720px) {
+    main {
+      max-width: 720px;
+      margin: 0 auto; } }
+  @media (min-width: 960px) {
+    main {
+      max-width: 960px;
+      margin: 0 auto; } }
+  @media (min-width: 1140px) {
+    main {
+      max-width: 1140px;
+      margin: 0 auto; } }
+
+section {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row; }
+  @media (min-width: 540px) {
+    section {
+      max-width: 540px;
+      margin: 0 auto; } }
+  @media (min-width: 720px) {
+    section {
+      max-width: 720px;
+      margin: 0 auto; } }
+  @media (min-width: 960px) {
+    section {
+      max-width: 960px;
+      margin: 0 auto; } }
+  @media (min-width: 1140px) {
+    section {
+      max-width: 1140px;
+      margin: 0 auto; } }
+  @media (max-width: 540px) {
+    section {
+      min-width: 100%;
+      flex-direction: column;
+      justify-content: end;
+      padding: 0 0.25rem; }
+      section .card {
+        flex-basis: 100%; }
+      section .half {
+        padding: 1rem 0.25rem;
+        min-width: 100%; }
+        section .half .circle-img {
+          padding: 0 2rem; }
+      section .third {
+        padding: 1rem 0.25rem;
+        min-width: 100%; }
+      section .full {
+        padding: 1rem 0.25rem;
+        min-width: 100%; } }
+
+@media (min-width: 540px) {
+  .container-fluid * {
+    max-width: 540px;
+    margin: 0 auto; } }
+@media (min-width: 720px) {
+  .container-fluid * {
+    max-width: 720px;
+    margin: 0 auto; } }
+@media (min-width: 960px) {
+  .container-fluid * {
+    max-width: 960px;
+    margin: 0 auto; } }
+@media (min-width: 1140px) {
+  .container-fluid * {
+    max-width: 1140px;
+    margin: 0 auto; } }
+
 body {
   font-size: 16px;
-  padding-right: 5px;
   font-family: "Titillium Web", sans-serif; }
 
 img {
