--- a/great-idea/scss/index.scss
+++ b/great-idea/scss/index.scss
@@ -1,4 +1,6 @@
 @import "base";
+@import "responsive";
+
 // Variables
 $light: rgb(241, 239, 239);
 $grey: rgb(148, 137, 137);
@@ -7,7 +9,6 @@ $border-style: 1px solid black;
 
 body {
   font-size: 16px;
-  padding-right: 5px;
   font-family: "Titillium Web", sans-serif;
 }
 
